@@ -25,6 +25,8 @@ ikiwiki (3.20110716) UNRELEASED; urgency=low
     the inlining page.
   * Fix comments testsuite to not rely on Date::Parse's ability to
     parse the date Columbus discovered America. Closes: #640350
+  * Avoid warning message when generating setup file if highlight
+    is not installed. Closes: #637606
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400
 
